# mxl-hands-on

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile.rust-build  README.md  THIRD-PARTY-NOTICES.md  build_all.sh  build_darwin.sh  build_linux.sh  build_linux_rust.sh  create_portables_amd64.sh  create_portables_arm.sh  create_portables_x86_64.sh  docker-compose.framerate-test.yml  docker-compose.gst-test.yml  docker-compose.rust-build.yml  how_to_build.md  test-gst-mxl-framerate.sh  test-gst-mxl-resolution.sh  testing_raster_frame_rates.md
Exercises/: Exercise1.md  Exercise2.md  Exercise3.md  Exercise4.md  Exercise5.md
LICENSES/: Apache-2.0.txt  CC-BY-4.0.txt  LICENSE.md
Preparation/: MAC.md  WSL-Alma.md  WSL-Ubuntu.md  WSL.md
build-images/: Dockerfile.clip-player.txt  Dockerfile.ffmpeg-mxl.txt  Dockerfile.looping.txt  Dockerfile.reader.txt  Dockerfile.writer.txt  README.md  build-demo-images.sh  build-ffmpeg-mxl-image.sh  docker-compose.yaml
docker/: README.md
docker/excercise-1/: docker-compose.yaml
docker/excercise-2/: docker-compose.yaml
docker/excercise-3/: docker-compose.yaml
docker/exercise-1/: docker-compose-local.yaml  docker-compose.yaml
docker/exercise-2/: docker-compose.yaml
docker/exercise-3/: docker-compose-local.yaml  docker-compose.mac.yml  (+4 more)
gst-apps/: .env  .env.template  README.md  docker-compose.mac.yml  docker-compose.yml  domain_def.json  gstreamer-pipeline.md
gst-apps/input-selector/backend-rs/: Cargo.toml
gst-apps/input-selector/backend-rs/src/: api.rs  black.rs  flowdef.rs  format.rs  main.rs  router.rs  scan.rs
k8s/: kube-deployment.yaml  vnc-mxl.yaml
(+210 files in other folders)
